:lipstick: :construction: migration to materializecss 1st step

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,8 +15,12 @@
  *= require jquery-ui
  *= require bootstrap/bootstrap-tooltip
  */
+@import "materialize/components/color";
+@import "colors";
+@import "materialize";
+@import "colors-fix";
 
-@import "autoload/colors";
+
 
  /*-----------------------------MENU-------------------------*/
 .menu {
