--- a/app/views/layouts/_menu.html.haml
+++ b/app/views/layouts/_menu.html.haml
@@ -1,30 +1,79 @@
 -#=cache(action_suffix: "primary") do
-%aside.sidebar
-  .plm.prm.int
-    #navigation
-      #logo
-        =link_to root_path do
-          =image_tag "logo_alumni.png"
-      #menu-button
-        .menu-item>
-          =link_to "#" do
-            %i.zmdi.zmdi-menu
-      %nav
-        .menu-item>
-          =link_to "Emails", dashboard_path, class: "menu-a"
+-#%aside.sidebar
+-#  .plm.prm.int
+-#    #navigation
+-#      #logo
+-#        =link_to root_path do
+-#          =image_tag "logo_alumni.png"
+-#      #menu-button
+-#        .menu-item>
+-#          =link_to "#" do
+-#            %i.zmdi.zmdi-menu
+-#      %nav
+-#        .menu-item>
+-#          =link_to "Emails", dashboard_path, class: "menu-a"
+-#
+-#        .menu-item>
+-#          =link_to "Listes de diffusions", mailinglists_path, class: "menu-a"
+-#        - if user_signed_in?
+-#          - if can? :read, :admin
+-#            .menu-item>
+-#              =form_tag  search_by_id_users_path,:method => :get, :user_id => :id_element do
+-#                =autocomplete_field_tag 'Hruid', '', autocomplete_user_hruid_users_path, :size => 10, :id_element => '#id', :placeholder => "prenom.nom.année"
+-#                =hidden_field_tag "id"
+-#                =submit_tag 'GO!', :class => ""
+-#            .menu-item>
+-#              =link_to "Administration", admin_path, class: "menu-a"
+-#          = render 'layouts/user_widget'
 
-        .menu-item>
-          =link_to "Listes de diffusions", mailinglists_path, class: "menu-a"
+
+%nav
+  .nav-wrapper
+    =link_to root_path class: "brand-logo" do
+      =image_tag "logo_alumni.png"
+    %a.button-collapse{"data-activates" => "mobile-demo", :href => "#"}
+      %i.material-icons menu
+
+    %ul.right.hide-on-med-and-down
+      %li
+        =link_to "Emails", dashboard_path
+      %li
+        =link_to "Listes de diffusions", mailinglists_path
+      - if user_signed_in?
+        - if can? :read, :admin
+          %li
+            =link_to "Administration", admin_path, class: "menu-a"
+      = render 'layouts/user_widget'
+    %ul.right
+      - if user_signed_in?
+        - if can? :read, :admin
+          %li
+            =form_tag  search_by_id_users_path, :method => :get, :user_id => :id_element do
+              .input-field
+                =autocomplete_field_tag 'Hruid', '', autocomplete_user_hruid_users_path, :id_element => '#id', :placeholder => "prenom.nom.année",type: "search", id: "search"
+                %label.label-icon{:for => "search"}
+                  %i.material-icons search
+                =hidden_field_tag "id"
+                %i.material-icons close
+                -#=submit_tag 'GO!', :class => ""
+
+
+
+    %ul.side-nav#mobile-demo
+      = render 'layouts/user_widget_mobile'
+
+      %li.divider
         - if user_signed_in?
           - if can? :read, :admin
-            .menu-item>
-              =form_tag  search_by_id_users_path,:method => :get, :user_id => :id_element do
-                =autocomplete_field_tag 'Hruid', '', autocomplete_user_hruid_users_path, :size => 10, :id_element => '#id', :placeholder => "prenom.nom.année"
-                =hidden_field_tag "id"
-                =submit_tag 'GO!', :class => ""
-            .menu-item>
+            %li
               =link_to "Administration", admin_path, class: "menu-a"
-          = render 'layouts/user_widget'
+            %li.divider
+      %li
+        =link_to "Emails", dashboard_path
+      %li
+        =link_to "Listes de diffusions", mailinglists_path
+
+
 
 
 
