--- a/app/views/shared/_es_list.html.haml
+++ b/app/views/shared/_es_list.html.haml
@@ -2,9 +2,9 @@
 -# autoriser les suppresion et ajout que pour les admins
 
 - emails_source.each do |e|
-  %li
+  %li.collection-item
     =e.email + "@" + e.email_virtual_domain.name
-    %span.fr
+    .secondary-content
       -if e.primary
         %i.zmdi.zmdi-star.icon-padding-list{ title: "Adresse principale", rel: 'tooltip'}
       -elsif can? :update, e
