--- a/app/assets/stylesheets/autoload/materialize-fix.css
+++ b/app/assets/stylesheets/autoload/materialize-fix.css
@@ -2,3 +2,9 @@
     overflow: visible!important;
 }
 
+.btn-floating.halfway-fab {
+    position: absolute;
+    right: 24px;
+    bottom: 0;
+    -webkit-transform: translateY(50%);
+    transform: translateY(50%);
