--- a/app/views/shared/_er_list.html.haml
+++ b/app/views/shared/_er_list.html.haml
@@ -4,76 +4,81 @@
     .card-content.white-text
       Avec un compte Google Apps, je reçois mes mails gadz.org en toute simplicité !
     .card-action
-      .mts= link_to ' Créer mon compte Google Apps ', create_google_apps_user_path(@user), method: :get,:remote=>true,  :class =>"waves-effect waves-light btn-flat", id: "create_google_apps_button"
+      .mts= link_to ' Créer mon compte Google Apps ', create_google_apps_user_path(@user), method: :get,:remote=>true,  :class =>"waves-effect waves-light btn white blue-grey-text", id: "create_google_apps_button"
   -if @emails_redirect.select{|e| e.active?}.count == 0
     .card.red.darken-4
       .card-content.white-text
         Attention ! Tu dois activer une des adresses ci-dessous ou créer un compte Google Gadz.org pour recevoir les mail envoyés à ton adresse gadz.org,
-%ul.collection#era_list
-  - @emails_redirect.each do |e|
-    -if e.type_redir == "googleapps"
-      .pam.bg-blue-dark-2
-      .card.blue-grey.darken-1
-        .card-content.white-text
-          -if e.confirmed
-            -# Only admin can desactivate google apps redirection but user can reactivate it.
-            -if e.active? && can?(:desactivate_google_apps_redirection, e)
+.card
+  .card-content
+    %ul#era_list
+      - @emails_redirect.each do |e|
+        -if e.type_redir == "googleapps"
+          .pam.bg-blue-dark-2
+          .card.blue-grey.darken-1
+            .card-content.white-text
+              -if e.confirmed
+                -# Only admin can desactivate google apps redirection but user can reactivate it.
+                -if e.active? && can?(:desactivate_google_apps_redirection, e)
+                  = link_to user_email_redirect_account_flag_path(@user.id, e.id, "inactive"), title: 'Désactiver cette redirection', rel: 'tooltip', :remote=>true do
+                    %i.zmdi.zmdi-check-square.icon-padding-list
+                -elsif !e.active?
+                  = link_to user_email_redirect_account_flag_path(@user.id, e.id, "active"), title: 'Activer la redirection des mails vers cette adresse', rel: 'tooltip', :remote=>true do
+                    %i.zmdi.zmdi-square-o.icon-padding-list
+                %span
+                  %i.zmdi.zmdi-google.icon-padding-list
+                  GMail #{@user.primary_email}
+                .card-action
+                  = link_to 'Connexion', "https://mail.google.com/a/gadz.org", :class =>"", :target => "_blank", id: "connect_to_google_button"
+              -else
+                %span
+                  %i.zmdi.zmdi-google.icon-padding-list
+                  Google Apps Gadz en cours de création...
+
+        -else
+          %li
+            -if !e.confirmed || e.inactive? || e.broken?
+              -if e.broken?
+                %i.zmdi.zmdi-alert-triangle.icon-padding-list.red
+              -elsif !e.confirmed
+                %i.zmdi.zmdi-square-o.icon-padding-list.inactive
+              -else
+                = link_to user_email_redirect_account_flag_path(@user.id, e.id, "active"), title: 'Activer la redirection des mails vers cette adresse', rel: 'tooltip', :remote=>true do
+                  %i.zmdi.zmdi-square-o.icon-padding-list.inactive
+
+              %span.inactive=e.redirect
+
+            -elsif e.active?
               = link_to user_email_redirect_account_flag_path(@user.id, e.id, "inactive"), title: 'Désactiver cette redirection', rel: 'tooltip', :remote=>true do
                 %i.zmdi.zmdi-check-square.icon-padding-list
-            -elsif !e.active?
-              = link_to user_email_redirect_account_flag_path(@user.id, e.id, "active"), title: 'Activer la redirection des mails vers cette adresse', rel: 'tooltip', :remote=>true do
-                %i.zmdi.zmdi-square-o.icon-padding-list
-            %span
-              %i.zmdi.zmdi-google.icon-padding-list
-              GMail #{@user.primary_email}
-            .card-action
-              = link_to 'Connexion', "https://mail.google.com/a/gadz.org", :class =>"", :target => "_blank", id: "connect_to_google_button"
-          -else
-            %span
-              %i.zmdi.zmdi-google.icon-padding-list
-              Google Apps Gadz en cours de création...
-
-    -else
-      %li.collection-item
-        -if !e.confirmed || e.inactive? || e.broken?
-          -if e.broken?
-            %i.zmdi.zmdi-alert-triangle.icon-padding-list.red
-          -elsif !e.confirmed
-            %i.zmdi.zmdi-square-o.icon-padding-list.inactive
-          -else
-            = link_to user_email_redirect_account_flag_path(@user.id, e.id, "active"), title: 'Activer la redirection des mails vers cette adresse', rel: 'tooltip', :remote=>true do
-              %i.zmdi.zmdi-square-o.icon-padding-list.inactive
-
-          %span.inactive=e.redirect
-
-        -elsif e.active?
-          = link_to user_email_redirect_account_flag_path(@user.id, e.id, "inactive"), title: 'Désactiver cette redirection', rel: 'tooltip', :remote=>true do
-            %i.zmdi.zmdi-check-square.icon-padding-list
-          =e.redirect
-        -else
-          =e.redirect
-          %span.red-text flag error
-
-        %span.secondary-content
-          -unless e.confirmed
-            -if can? :read, :admin
-              = link_to confirm_user_email_redirect_accounts_url(@user, e.confirmation_token), method: :get, :remote => true, title: 'Valider email', rel: 'tooltip', data: {confirm: "Vous allez forcer la validation d'un email. L'utilisateur n'aura pas besoin de confirmer cette adresse en cliquant sur le lien qu'il a reçu lors de son ajout."} do
-                %i.zmdi.zmdi-lock.icon-padding-list.red-text
+              =e.redirect
             -else
-              = link_to "#", title: "Un email t'as été sur cette adresse pour la confirmer" , rel: 'tooltip' do
-                %i.zmdi.zmdi-lock.icon-padding-list.red-text
+              =e.redirect
+              %span.red-text flag error
 
-          -#%i.zmdi.zmdi-edit.icon-padding-list
-          -if can? :destroy, e
-            = link_to user_email_redirect_account_path(@user,e), method: :delete, :remote => true, confirm: true,  title: 'Supprimer cette adresse', rel: 'tooltip',class: :era_del_button ,data: {confirm: "Tu vas supprimer définitivement cette addresse, es-tu bien certain ? Tu pourras dans tous les cas la recréer plus tard si tu le souhaites."} do
-              %i.zmdi.zmdi-delete.icon-padding-list
+            %span.secondary-content
+              -unless e.confirmed
+                -if can? :read, :admin
+                  = link_to confirm_user_email_redirect_accounts_url(@user, e.confirmation_token), method: :get, :remote => true, title: 'Valider email', rel: 'tooltip', data: {confirm: "Vous allez forcer la validation d'un email. L'utilisateur n'aura pas besoin de confirmer cette adresse en cliquant sur le lien qu'il a reçu lors de son ajout."} do
+                    %i.zmdi.zmdi-lock.icon-padding-list.red-text
+                -else
+                  = link_to "#", title: "Un email t'as été sur cette adresse pour la confirmer" , rel: 'tooltip' do
+                    %i.zmdi.zmdi-lock.icon-padding-list.red-text
 
-        %span
-          -unless e.confirmed
-            %br/
-            .red-text Suis les instructions dans le mail envoyé à cette adresse pour la valider.
-          -if e.broken?
-            %br/
-            .red-text Cette adresse semble ne plus fonctionner
+              -#%i.zmdi.zmdi-edit.icon-padding-list
+              -if can? :destroy, e
+                = link_to user_email_redirect_account_path(@user,e), method: :delete, :remote => true, confirm: true,  title: 'Supprimer cette adresse', rel: 'tooltip',class: :era_del_button ,data: {confirm: "Tu vas supprimer définitivement cette addresse, es-tu bien certain ? Tu pourras dans tous les cas la recréer plus tard si tu le souhaites."} do
+                  %i.zmdi.zmdi-delete.icon-padding-list
+
+            %span
+              -unless e.confirmed
+                %br/
+                .red-text Suis les instructions dans le mail envoyé à cette adresse pour la valider.
+              -if e.broken?
+                %br/
+                .red-text Cette adresse semble ne plus fonctionner
+  .card-action
+    / Modal Trigger
+    %a.modal-trigger.waves-effect.waves-light.btn{:href => "#modal2"} Ajouter une adresse
 
 
