:lipstick: :construction: update ml list UI

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -134,7 +134,7 @@ section{/*background: #fff;*/}
 body, button, input, select, textarea {
     color: #4C4C4C;
     font-family: "proxima_novalight";
-    font-size: 18px;
+    //font-size: 18px;
     line-height: 1.5;
 }
 
