--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,8 +19,7 @@
 @import "colors";
 @import "materialize";
 @import "colors-fix";
-
-
+@import "materialize-fix";
 
  /*-----------------------------MENU-------------------------*/
 .menu {
