:lipstick: :construction: fix add era modal

--- a/app/views/shared/_er_list.html.haml
+++ b/app/views/shared/_er_list.html.haml
@@ -79,6 +79,6 @@
                 .red-text Cette adresse semble ne plus fonctionner
   .card-action
     / Modal Trigger
-    %a.modal-trigger.waves-effect.waves-light.btn{:href => "#modal2"} Ajouter une adresse
+    %a.modal-trigger.waves-effect.waves-light.btn{:href => "#modal-add-era"} Ajouter une adresse
 
 
