--- a/app/views/shared/_ml_list.html.haml
+++ b/app/views/shared/_ml_list.html.haml
@@ -3,38 +3,39 @@
   -lists.each do |l|
     -#=link_to ml_list_path(l), class: "waves-effect black-text" do
     %li.collection-item.avatar
-      %i.material-icons.circle comment
-      %span.title
-        %b=l.name
-      %p.hide-on-med-and-down
-        =l.description
-        =l.redirection_alias
-      %p.grey-text.hide-on-large-only
-        =l.description
-        =l.redirection_alias
-      .small.hide-on-small-only
-        .grey-text
-          %span
-            %i.zmdi.zmdi-accounts-alt
-          %span #{l.members_count} membres
-          %i.zmdi.zmdi-account-add
-          Inscriptions
-          -case l.inscription_policy
-          -when  "open"
-            libres,
-          -when "conditional_gadz"
-            reservées aux gadz,
-          -when "closed"
-            gérée par un admin,
-          -when "in_group"
-            reservées aux membres du groupe,
-          -case l.diffusion_policy
-          -when "open"
-            tout le monde peut y écrire
-          -when "closed"
-            seuls les membres peuvent y écrire
-          -when "moderated"
-            messages modérés
+      =link_to ml_list_path(l), class: "black-text" do
+        %i.material-icons.circle comment
+        %span.title
+          %b=l.name
+        %p.hide-on-med-and-down
+          =l.description
+          =l.redirection_alias
+        %p.grey-text.hide-on-large-only
+          =l.description
+          =l.redirection_alias
+        .small.hide-on-small-only
+          .grey-text
+            %span
+              %i.zmdi.zmdi-accounts-alt
+            %span #{l.members_count} membres
+            %i.zmdi.zmdi-account-add
+            Inscriptions
+            -case l.inscription_policy
+            -when  "open"
+              libres,
+            -when "conditional_gadz"
+              reservées aux gadz,
+            -when "closed"
+              gérée par un admin,
+            -when "in_group"
+              reservées aux membres du groupe,
+            -case l.diffusion_policy
+            -when "open"
+              tout le monde peut y écrire
+            -when "closed"
+              seuls les membres peuvent y écrire
+            -when "moderated"
+              messages modérés
 
 
       .small.hide-on-small-only
