Add pagination on members in list show

--- a/app/assets/stylesheets/materialize-fix.css.scss
+++ b/app/assets/stylesheets/materialize-fix.css.scss
@@ -19,3 +19,11 @@
 .dropdown-content i{
   display: inline;
 }
+
+.btn-small{
+  height: 1.5em;
+  width: 1.5em;
+  text-align: center;
+  line-height: 1em;
+  padding-top: 0.3em;
+}
