--- a/app/views/ml/lists/_ml_members.html.haml
+++ b/app/views/ml/lists/_ml_members.html.haml
@@ -1,4 +1,4 @@
-=render partial: "shared/ml_members_list_box", locals: {members: @members, show_search: true, name: "Membres"}
+=render partial: "ml_members_list_box", locals: {members: @members, show_search: true, name: "Membres", id: 'members'}
 
 
 .card
@@ -20,11 +20,11 @@
                   =link_to ml_list_remove_email_path(list_id: @ml_list.id, email_id: m.id), :method => :delete, :data => { :confirm => 'Are you sure?' } do
                     %i.zmdi.zmdi-delete.icon-padding-list
 
-.mtm=render partial: "shared/ml_members_list_box", locals: {members: @admins_and_moderators, show_search: false,name: "Admins et modo"}
+.mtm=render partial: "ml_members_list_box", locals: {members: @admins_and_moderators, show_search: false,name: "Admins et modo",id: 'admins'}
 -if can? :admin_members, @ml_list
   -if @pendings.any?
-    .mtm=render partial: "shared/ml_members_list_box", locals: {members: @pendings, show_search: false,name: "Inscriptions en attente"}
+    .mtm=render partial: "ml_members_list_box", locals: {members: @pendings, show_search: false,name: "Inscriptions en attente", id: 'pendings'}
   -if @banneds.any?
-    .mtm=render partial: "shared/ml_members_list_box", locals: {members: @banneds, show_search: false,name: "Bannis"}
+    .mtm=render partial: "ml_members_list_box", locals: {members: @banneds, show_search: false,name: "Bannis", id: 'banned'}
 
 
