:lipstick: :construction: clean dashboard + menu

--- a/app/views/users/dashboard.html.haml
+++ b/app/views/users/dashboard.html.haml
@@ -36,7 +36,7 @@
 
 
     .ma1.col.l2.hide-on-med-and-down
-      .txtcenter.vertical-center.horizontal-center
+      .center
         %i.zmdi.zmdi-long-arrow-right#big-arrow
     .col.m12.divider.hide-on-large-only
     .col.s12.l5
