--- a/app/views/layouts/_menu.html.haml
+++ b/app/views/layouts/_menu.html.haml
@@ -30,7 +30,7 @@
 %nav
   .nav-wrapper
     =link_to root_path class: "brand-logo" do
-      =image_tag "logo_alumni.png"
+      =image_tag "logo_alumni.png", id: "logo"
     %a.button-collapse{"data-activates" => "mobile-demo", :href => "#"}
       %i.material-icons menu
 
