:lipstick: :construction: fix wrong email in setup + add era modal on mobile

--- a/app/views/users/dashboard.html.haml
+++ b/app/views/users/dashboard.html.haml
@@ -50,7 +50,7 @@
 
 
         / Modal Structure
-        #modal-add-era.modal.modal-fixed-footer
+        #modal-add-era.modal.bottom-sheet
           .modal-content
             %h4 Ajouter une nouvelle adresse de redirection
             %p Tu peux ajouter ici une nouvelle adresse vers laquelle seront transfèrés les emails envoyés sur tes adresses gadz.org.
@@ -60,8 +60,9 @@
                 =label_tag(:redirect, "Entre ici la nouvelle adresse","data-error"=>"Cette addresse n'est pas au bon format")
 
                 =f.submit 'Ajouter cette adresse',:class => "waves-effect waves-light btn", id: :new_email_redirect_account_submit
+                %a.modal-action.modal-close.waves-effect.waves-green.btn-flat{:href => "#!"} Annuler
           .modal-footer
-            %a.modal-action.modal-close.waves-effect.waves-green.btn-flat{:href => "#!"} Annuler
+
 
 
 
