:lipstick: :construction: fix search for mobile

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,6 +22,11 @@
 @import "materialize-fix";
 
  /*-----------------------------MENU-------------------------*/
+.search-wrapper{
+  padding-right: 2px;
+  padding-left: 2px;
+}
+
 .menu {
     float: right;
     /*margin-right: 45px;*/
