--- a/app/views/ml/lists/_ml_members_list_box.html.haml
+++ b/app/views/ml/lists/_ml_members_list_box.html.haml
@@ -7,3 +7,4 @@
       =form_tag ml_list_path(@ml_list), :method => :get ,class: "", id: "search" do
         =text_field_tag :search, params[:search], :placeholder => "Recherche par adresse, nom ou prénom parmis les #{@ml_list.members_count} membres de cette liste", :class => "w100 login", :autofocus => false
     =render partial: "ml_members_list", locals: {members: members, block_id: id}
+    =will_paginate(@members_collection, renderer: MaterializeLinkRenderer)
